--- a/assignment.css
+++ b/assignment.css
@@ -102,3 +102,7 @@ ul {
     ul li a:hover {color: rgb(255, 204, 230);} /* Change color on hover */
 
    a:hover {color: #ff6b6b}
+
+   ul li a.active {
+    background-color:rgb(148, 77, 255); /* Change background color for active item */
+  }
