--- a/page4.css
+++ b/page4.css
@@ -89,3 +89,7 @@ p2{ width: 200px; /* Set width of the element */
       padding: 30px;
   }
   
+
+  ul li a.active {
+    background-color:rgb(148, 77, 255); /* Change background color for active item */
+  }
