--- a/assignment.css
+++ b/assignment.css
@@ -23,7 +23,13 @@ text-align: center;}
     
 }
 
-
+.container3{margin: 10px;
+    padding: 50px;
+display:grid;
+grid-template-columns: 1fr 1fr 1fr ;
+justify-content: center;;
+    
+}
 
 .para-1 {font-size: medium;
        font-family: "Comic Sans MS";}
@@ -34,6 +40,13 @@ text-align: center;}
 .para-4{font-size: medium;
     font-family: "Comic Sans MS";}
 
+.gifff{margin: 1px;
+    width: 310px;
+    height: 315px;
+    display:block;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;}
 
 .giff {margin: 1px;
     width: 300px;
