--- a/page1.css
+++ b/page1.css
@@ -26,10 +26,12 @@ a:hover {color: #ff6b6b}
         padding: 50px;}
 
 .para-1{font-size: medium;
-    font-family: "Comic Sans MS";}
+    font-family: "Comic Sans MS";
+    color:rgb(96, 15, 146);}
 
 .para-2{font-size: medium;
-    font-family: "Comic Sans MS";}
+    font-family: "Comic Sans MS";
+    color:rgb(96, 15, 146);}
 
 
 .xiao{margin: 20px;
