--- a/page2.css
+++ b/page2.css
@@ -40,11 +40,13 @@ p2 :hover{ color: #ff6b6b;}
 
 .para-1{font-size: medium;
     font-family: "Comic Sans MS";
-    margin:50px}
+    margin:50px;
+    color:rgb(96, 15, 146);}
 
 .para-2{font-size: medium;
     font-family: "Comic Sans MS";
-margin:50px}
+margin:50px;
+color:rgb(96, 15, 146);}
 
    
 
