--- a/page4.css
+++ b/page4.css
@@ -33,10 +33,12 @@ p1{Color:rgb(31, 0, 77);
     font-size: smaller;}
 
 .para-1{font-size: medium;
-        font-family: "Comic Sans MS";}
+        font-family: "Comic Sans MS";
+        color:rgb(96, 15, 146);}
     
 .para-2{font-size: medium;
-        font-family: "Comic Sans MS";}
+        font-family: "Comic Sans MS";
+        color:rgb(96, 15, 146);}
 
 
 h2{ text-align: center;
